--- a/AllstateCarProject/Base.lproj/Main.storyboard
+++ b/AllstateCarProject/Base.lproj/Main.storyboard
@@ -1,25 +1,177 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="dUR-lG-wlW">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Demo-->
+        <scene sceneID="bCt-v1-BeZ">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="AllstateCarProject" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="wIE-26-1gB" userLabel="Demo" customClass="DemoViewController" customModule="AllstateCarProject" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
+                        <viewControllerLayoutGuide type="top" id="pmt-hs-mQK"/>
+                        <viewControllerLayoutGuide type="bottom" id="mxR-gE-268"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                    <view key="view" contentMode="scaleToFill" id="f1Z-F5-Wts">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="saG-Fw-TEM">
+                                <rect key="frame" x="40" y="140" width="34" height="30"/>
+                                <state key="normal" title="Start"/>
+                                <connections>
+                                    <action selector="startButtonPressed:" destination="wIE-26-1gB" eventType="touchUpInside" id="CV3-QX-iHb"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cOA-dg-2Zk">
+                                <rect key="frame" x="342" y="140" width="32" height="30"/>
+                                <state key="normal" title="Stop"/>
+                                <connections>
+                                    <action selector="stopButtonPressed:" destination="wIE-26-1gB" eventType="touchUpInside" id="EPk-g1-IgP"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="36q-ZK-XHI">
+                                <rect key="frame" x="23" y="270" width="81" height="30"/>
+                                <state key="normal" title="Look Phone"/>
+                                <connections>
+                                    <action selector="LookPhoneButtonPressed:" destination="wIE-26-1gB" eventType="touchUpInside" id="O6Q-Bt-yHc"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v1C-GY-ujw">
+                                <rect key="frame" x="302" y="270" width="98" height="30"/>
+                                <state key="normal" title="Over Speeded"/>
+                                <connections>
+                                    <action selector="OverSpeededButtonPressed:" destination="wIE-26-1gB" eventType="touchUpInside" id="ngU-pU-KaA"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Distance:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S2X-PE-OqQ">
+                                <rect key="frame" x="27" y="400" width="72" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="jyG-kW-Qve">
+                                <rect key="frame" x="114" y="396" width="200" height="30"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Jti-fW-Dpl">
+                                        <rect key="frame" x="0.0" y="0.0" width="200" height="30"/>
+                                        <subviews>
+                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bZR-0F-Xmb">
+                                                <rect key="frame" x="0.0" y="0.0" width="200" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="200" id="q9h-Am-cbC"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b0s-Vn-a9o">
+                                <rect key="frame" x="161" y="270" width="92" height="30"/>
+                                <state key="normal" title="Mic Too Loud"/>
+                                <connections>
+                                    <action selector="MicTooLoudButtonPressed:" destination="wIE-26-1gB" eventType="touchUpInside" id="xYo-8V-CtT"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="saG-Fw-TEM" firstAttribute="leading" secondItem="f1Z-F5-Wts" secondAttribute="leadingMargin" constant="20" id="6gt-HZ-Uap"/>
+                            <constraint firstItem="v1C-GY-ujw" firstAttribute="top" secondItem="cOA-dg-2Zk" secondAttribute="bottom" constant="100" id="Jjf-or-Bgf"/>
+                            <constraint firstItem="36q-ZK-XHI" firstAttribute="top" secondItem="saG-Fw-TEM" secondAttribute="bottom" constant="100" id="S7g-Kk-kqw"/>
+                            <constraint firstItem="S2X-PE-OqQ" firstAttribute="leading" secondItem="f1Z-F5-Wts" secondAttribute="leadingMargin" constant="7" id="V9a-QZ-cLU"/>
+                            <constraint firstItem="saG-Fw-TEM" firstAttribute="top" secondItem="pmt-hs-mQK" secondAttribute="bottom" constant="120" id="cdp-kU-bBd"/>
+                            <constraint firstItem="b0s-Vn-a9o" firstAttribute="centerX" secondItem="f1Z-F5-Wts" secondAttribute="centerX" id="dQS-NR-aeJ"/>
+                            <constraint firstItem="cOA-dg-2Zk" firstAttribute="top" secondItem="pmt-hs-mQK" secondAttribute="bottom" constant="120" id="l0H-EK-f5z"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="cOA-dg-2Zk" secondAttribute="trailing" constant="20" id="mZA-vt-dsl"/>
+                            <constraint firstItem="b0s-Vn-a9o" firstAttribute="top" secondItem="pmt-hs-mQK" secondAttribute="bottom" constant="250" id="oiS-nP-kgT"/>
+                            <constraint firstItem="S2X-PE-OqQ" firstAttribute="top" secondItem="36q-ZK-XHI" secondAttribute="bottom" constant="100" id="p3E-XN-bLi"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="v1C-GY-ujw" secondAttribute="trailing" constant="-6" id="s6H-yh-nyi"/>
+                            <constraint firstItem="36q-ZK-XHI" firstAttribute="leading" secondItem="f1Z-F5-Wts" secondAttribute="leadingMargin" constant="3" id="wJl-74-FKv"/>
+                        </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Demo" id="YEY-AW-5E9" userLabel="Demo"/>
+                    <connections>
+                        <outlet property="LookPhoneButton" destination="36q-ZK-XHI" id="RQ2-yo-U8k"/>
+                        <outlet property="MicTooLoudButton" destination="b0s-Vn-a9o" id="g81-fr-xPW"/>
+                        <outlet property="OverSpeededButton" destination="v1C-GY-ujw" id="5k5-zP-2da"/>
+                        <outlet property="distanceTextField" destination="bZR-0F-Xmb" id="wRr-Ju-BbX"/>
+                        <outlet property="startButton" destination="saG-Fw-TEM" id="TFU-WX-EHG"/>
+                        <outlet property="stopButton" destination="cOA-dg-2Zk" id="iBL-GK-1bp"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RE1-0u-IOm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-482" y="-684"/>
+        </scene>
+        <!--Root View Controller-->
+        <scene sceneID="4cT-iN-R6A">
+            <objects>
+                <tableViewController id="URb-bE-3We" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="jPB-2R-YRy">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="pHx-VC-S6g">
+                                <rect key="frame" x="0.0" y="92" width="414" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="pHx-VC-S6g" id="6Ee-18-BBm">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="URb-bE-3We" id="9rT-yf-PqP"/>
+                            <outlet property="delegate" destination="URb-bE-3We" id="f6F-qr-5Fa"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Root View Controller" id="1Yd-Cg-lbo"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="z8o-HZ-0rL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="28" y="107"/>
+        </scene>
+        <!--Data Item-->
+        <scene sceneID="0uY-Rx-uYR">
+            <objects>
+                <navigationController id="emg-gr-0E1" userLabel="Data Item" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Data" id="QZa-wR-0az"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="LSl-CV-5pT">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="URb-bE-3We" kind="relationship" relationship="rootViewController" id="Zsh-9a-8at"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZIS-gf-iOb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-482" y="107"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="lLF-ft-txm">
+            <objects>
+                <tabBarController id="dUR-lG-wlW" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="y73-Uf-Kcm"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="LoO-9m-yE7">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="wIE-26-1gB" kind="relationship" relationship="viewControllers" id="9ym-In-Zw6"/>
+                        <segue destination="emg-gr-0E1" kind="relationship" relationship="viewControllers" id="d8F-Kv-5bu"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2cN-8Y-6Rk" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1086" y="-293"/>
         </scene>
     </scenes>
 </document>
