--- a/AllstateCarProject/Base.lproj/Main.storyboard
+++ b/AllstateCarProject/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="dUR-lG-wlW">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1605" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="dUR-lG-wlW">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -107,51 +107,51 @@
             </objects>
             <point key="canvasLocation" x="-482" y="-684"/>
         </scene>
-        <!--Root View Controller-->
-        <scene sceneID="4cT-iN-R6A">
+        <!--Data-->
+        <scene sceneID="MVD-KB-wHP">
             <objects>
-                <tableViewController id="URb-bE-3We" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="jPB-2R-YRy">
+                <tableViewController id="Otv-nD-kmx" customClass="ShowDataTableViewController" customModule="AllstateCarProject" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="NNU-D6-ZwG">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="pHx-VC-S6g">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="showData" id="i3u-Zo-Rlg">
                                 <rect key="frame" x="0.0" y="92" width="414" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="pHx-VC-S6g" id="6Ee-18-BBm">
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="i3u-Zo-Rlg" id="gcY-0T-apt">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
                         </prototypes>
                         <connections>
-                            <outlet property="dataSource" destination="URb-bE-3We" id="9rT-yf-PqP"/>
-                            <outlet property="delegate" destination="URb-bE-3We" id="f6F-qr-5Fa"/>
+                            <outlet property="dataSource" destination="Otv-nD-kmx" id="epZ-ym-6YC"/>
+                            <outlet property="delegate" destination="Otv-nD-kmx" id="3UE-No-bi7"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="1Yd-Cg-lbo"/>
+                    <navigationItem key="navigationItem" title="Data" id="Lk8-H9-UqJ"/>
                 </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="z8o-HZ-0rL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Rhq-eQ-uKj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="28" y="107"/>
+            <point key="canvasLocation" x="-27" y="203"/>
         </scene>
-        <!--Data Item-->
-        <scene sceneID="0uY-Rx-uYR">
+        <!--showData-->
+        <scene sceneID="asH-RX-XjS">
             <objects>
-                <navigationController id="emg-gr-0E1" userLabel="Data Item" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Data" id="QZa-wR-0az"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="LSl-CV-5pT">
+                <navigationController id="4yw-V9-RyX" userLabel="showData" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Data" id="dJf-q4-qz4"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="vh4-sh-Vfs">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="URb-bE-3We" kind="relationship" relationship="rootViewController" id="Zsh-9a-8at"/>
+                        <segue destination="Otv-nD-kmx" kind="relationship" relationship="rootViewController" id="chH-PI-EuY"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ZIS-gf-iOb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0YZ-yq-wVf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-482" y="107"/>
+            <point key="canvasLocation" x="-511" y="203"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="lLF-ft-txm">
@@ -166,7 +166,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="wIE-26-1gB" kind="relationship" relationship="viewControllers" id="9ym-In-Zw6"/>
-                        <segue destination="emg-gr-0E1" kind="relationship" relationship="viewControllers" id="d8F-Kv-5bu"/>
+                        <segue destination="4yw-V9-RyX" kind="relationship" relationship="viewControllers" id="frR-gD-6aV"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2cN-8Y-6Rk" userLabel="First Responder" sceneMemberID="firstResponder"/>
