--- a/AllstateCarProject/BooleanChart.xib
+++ b/AllstateCarProject/BooleanChart.xib
@@ -7,7 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BooleanChart" customModule="AllstateCarProject" customModuleProvider="target">
             <connections>
-                <outlet property="chartSpace" destination="lnv-Jy-8yN" id="6ni-ia-xgb"/>
+                <outlet property="dataSpace" destination="lnv-Jy-8yN" id="tR6-Uh-byt"/>
                 <outlet property="time" destination="gh2-PN-VNx" id="1WM-Uc-jIb"/>
                 <outlet property="title" destination="nFj-z3-OfK" id="E2V-mg-dd7"/>
                 <outlet property="view" destination="iN0-l3-epB" id="MeM-HP-kUP"/>
@@ -15,21 +15,21 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+            <rect key="frame" x="0.0" y="0.0" width="621" height="338"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TPO-zC-MFK">
-                    <rect key="frame" x="8" y="575" width="584" height="17"/>
+                    <rect key="frame" x="8" y="313" width="605" height="17"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Start" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fh9-md-G3f">
-                            <rect key="frame" x="0.0" y="0.0" width="35" height="17"/>
-                            <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                            <rect key="frame" x="0.0" y="0.0" width="33" height="17"/>
+                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
                             <color key="textColor" red="0.29803922770000002" green="0.29803922770000002" blue="0.29803922770000002" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Finish" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cK8-Km-95S">
-                            <rect key="frame" x="542.5" y="0.0" width="41.5" height="17"/>
-                            <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                            <rect key="frame" x="565" y="0.0" width="39.5" height="17"/>
+                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
                             <color key="textColor" red="0.29803922770000002" green="0.29803922770000002" blue="0.29803922770000002" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
@@ -45,17 +45,17 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4MS-uU-A2K">
-                    <rect key="frame" x="8" y="8" width="584" height="26.5"/>
+                    <rect key="frame" x="8" y="0.0" width="605" height="26.5"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nFj-z3-OfK">
-                            <rect key="frame" x="8" y="0.0" width="46.5" height="26.5"/>
-                            <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
-                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <rect key="frame" x="0.0" y="0.0" width="44" height="26.5"/>
+                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="22"/>
+                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gh2-PN-VNx">
-                            <rect key="frame" x="524" y="0.0" width="52" height="27"/>
-                            <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
+                            <rect key="frame" x="561" y="0.0" width="36" height="27"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
                             <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
@@ -64,14 +64,14 @@
                     <constraints>
                         <constraint firstItem="gh2-PN-VNx" firstAttribute="top" secondItem="4MS-uU-A2K" secondAttribute="top" id="2yb-c4-DsZ"/>
                         <constraint firstAttribute="bottom" secondItem="nFj-z3-OfK" secondAttribute="bottom" id="AaG-9G-9zK"/>
-                        <constraint firstItem="nFj-z3-OfK" firstAttribute="leading" secondItem="4MS-uU-A2K" secondAttribute="leading" constant="8" id="HE0-9M-cYd"/>
+                        <constraint firstItem="nFj-z3-OfK" firstAttribute="leading" secondItem="4MS-uU-A2K" secondAttribute="leading" id="HE0-9M-cYd"/>
                         <constraint firstItem="nFj-z3-OfK" firstAttribute="top" secondItem="4MS-uU-A2K" secondAttribute="top" id="SfO-Fk-OhU"/>
                         <constraint firstAttribute="bottom" secondItem="gh2-PN-VNx" secondAttribute="bottom" id="WZq-FZ-sc3"/>
                         <constraint firstAttribute="trailing" secondItem="gh2-PN-VNx" secondAttribute="trailing" constant="8" id="btE-0n-9ie"/>
                     </constraints>
                 </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lnv-Jy-8yN">
-                    <rect key="frame" x="8" y="34.5" width="584" height="540.5"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lnv-Jy-8yN" customClass="BooleanChartData" customModule="AllstateCarProject" customModuleProvider="target">
+                    <rect key="frame" x="8" y="26" width="605" height="286.5"/>
                     <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                 </view>
             </subviews>
@@ -80,7 +80,7 @@
                 <constraint firstItem="lnv-Jy-8yN" firstAttribute="top" secondItem="4MS-uU-A2K" secondAttribute="bottom" id="3qE-rh-StB"/>
                 <constraint firstItem="lnv-Jy-8yN" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leadingMargin" id="6Q4-IS-eSZ"/>
                 <constraint firstAttribute="trailingMargin" secondItem="lnv-Jy-8yN" secondAttribute="trailing" id="8ph-ma-Yew"/>
-                <constraint firstItem="4MS-uU-A2K" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="topMargin" id="NFC-Gj-ubO"/>
+                <constraint firstItem="4MS-uU-A2K" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="NFC-Gj-ubO"/>
                 <constraint firstItem="TPO-zC-MFK" firstAttribute="top" secondItem="lnv-Jy-8yN" secondAttribute="bottom" id="NuM-T7-GwL"/>
                 <constraint firstItem="TPO-zC-MFK" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leadingMargin" id="PSt-OW-EGY"/>
                 <constraint firstAttribute="trailingMargin" secondItem="TPO-zC-MFK" secondAttribute="trailing" id="Z85-Z3-0Us"/>
@@ -88,6 +88,9 @@
                 <constraint firstItem="TPO-zC-MFK" firstAttribute="bottom" secondItem="iN0-l3-epB" secondAttribute="bottomMargin" id="dfV-4o-PHc"/>
                 <constraint firstAttribute="trailingMargin" secondItem="4MS-uU-A2K" secondAttribute="trailing" id="jR5-bw-6zo"/>
             </constraints>
+            <nil key="simulatedStatusBarMetrics"/>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <point key="canvasLocation" x="241.5" y="62"/>
         </view>
     </objects>
 </document>
